# Trading-Bot

./: .env  .gitignore  applicants.csv  binance_client.py  config.py  file.py  main.py  pyproject.toml  pyversion.txt  requirements.txt  risk_manager.py  second captcha.txt  strategy.py  test.py  trade_logger.py  verify_ocr.py
html/: appointement.html  captchafail.html  email.html  index.html  password.html  secondcaptcha.html  slots.html  visatype.html
results/: batch_results_1771954580.json  batch_results_1771954981.json  batch_results_1771956433.json  batch_results_1771957645.json  batch_results_1771958225.json  batch_results_1771958960.json  batch_results_1772028095.json  batch_results_1772028751.json  batch_results_1772084024.json  batch_results_1772084394.json  batch_results_1772084757.json  batch_results_1772092521.json  batch_results_1772106056.json  batch_results_1772120715.json  batch_results_1772121381.json  batch_results_1772122100.json  batch_results_1772152483.json  batch_results_1772152834.json  batch_results_1772154122.json  batch_results_1772154754.json  batch_results_1772160535.json  batch_results_1772351346.json  batch_results_1772351595.json  batch_results_1772353720.json  batch_results_1772353817.json  batch_results_1772354466.json  batch_results_1772354867.json  batch_results_1772359865.json  batch_results_1772364118.json  batch_results_1772422984.json  batch_results_1772443860.json  batch_results_1772444710.json  batch_results_1772445413.json  batch_results_1772446060.json  batch_results_1772446275.json  batch_results_1772447628.json  (+193 more)
(+14 files in other folders)
