[project]
name = "spain-visa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.12",
    "chardet>=6.0.0.post1",
    "charset-normalizer>=3.4.4",
    "langchain-google-genai>=4.2.1",
    "mypy>=1.19.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "pillow>=12.1.1",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rapidocr-onnxruntime>=1.4.4",
    "requests>=2.32.5",
    "ruff>=0.15.4",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.3",
]
